# Aruco-flahscards

./: CLAUDE.md  CMakeLists.txt  README.md
assets/: README.md
assets/objects/: README.md
assets/objects/sea_turtle/: sea_turtle.mtl
config/: assets.json  assets.json.example  calibration.yaml.example
include/: ARApplication.h  Asset.h  AssetManager.h  Camera.h  IPCamera.h  MarkerDetector.h  ModelAsset.h  ModelRenderer.h  OpenGLRenderContext.h  PoseEstimator.h  Renderer.h  TextureAsset.h  TextureRenderer.h  VideoFileCamera.h  WebcamCamera.h  WireframeAsset.h  WireframeRenderer.h
src/: ARApplication.cpp  Asset.cpp  AssetManager.cpp  Camera.cpp  IPCamera.cpp  MarkerDetector.cpp  ModelAsset.cpp  ModelRenderer.cpp  OpenGLRenderContext.cpp  PoseEstimator.cpp  VideoFileCamera.cpp  WebcamCamera.cpp  main.cpp
